# cerulean

./: Cargo.toml  LICENSE.note  README.md  build.rs
.github/workflows/: CI.yml
src/: interpolation.rs  lib.rs  palettes.json
